# naive_p2p

./: Cargo.toml  README.md
configs/: alice.toml  bob.toml  tom.toml
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  node.rs  p2p.rs  peer.rs  state.rs  types.rs  utils.rs
src/tests/: mod.rs  p2p_test.rs
