[package]
name = "naive_p2p"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config="0.9"
clap = {version = "2.33", features = ["yaml"]}
serde = { version = "1.0.99", features = ['derive'] }
serde_json = {version = "1.0.40"}
tokio = "0.2.0-alpha.4"
tokio-net = "0.2.0-alpha.4"
tokio-executor = "0.2.0-alpha.4"
tokio-codec = "0.2.0-alpha.4"
tokio-io = "0.2.0-alpha.4"
tokio-sync = "0.2.0-alpha.4"
tokio-timer = "0.3.0-alpha.4"
bytes = "0.4.12"
futures_core = { package = "futures-core-preview", version = "0.3.0-alpha.18"}
futures_util = { package = "futures-util-preview", version = "0.3.0-alpha.18"}
futures_sink = { package = "futures-sink-preview", version = "0.3.0-alpha.18"}
futures = { package = "futures-preview", version = "0.3.0-alpha.18", features = ["nightly", "async-await", "alloc"] }
futures-channel-preview = "0.3.0-alpha.18"
async-std = "0.99"
log = "0.4"
pretty_env_logger = "0.3"
failure = "0.1"
hyper = { git = "https://github.com/hyperium/hyper", branch = "master", features = ["unstable-stream"] }
base64 = "0.10"
sha2 = "0.8"
hex = "0.4"
rand = "0.7"
